[gd_scene load_steps=48 format=3 uid="uid://srwaah0btci4"]

[ext_resource type="Texture2D" uid="uid://dcb6p02pcwpcm" path="res://assets/art/Beetle-Sheet.png" id="1_01cgb"]
[ext_resource type="Script" path="res://scripts/rigid_beetle.gd" id="1_cm0x8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_ugt8w"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_osvh8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ij111"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_sx0lh"]
[ext_resource type="Script" path="res://scripts/input_component.gd" id="7_64t7q"]
[ext_resource type="Script" path="res://scripts/rigid_movement_component.gd" id="7_n44gs"]
[ext_resource type="Script" path="res://scripts/rigid_animation_component.gd" id="8_s8l21"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="10_m6x6o"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lp0oi"]
load_path = "res://.godot/imported/Beetle-Sheet.png-16febdd66ec0754389553783bc9bf69c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_g40oq"]
atlas = SubResource("CompressedTexture2D_lp0oi")
region = Rect2(32, 64, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6a70"]
atlas = SubResource("CompressedTexture2D_lp0oi")
region = Rect2(64, 64, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2153"]
atlas = ExtResource("1_01cgb")
region = Rect2(32, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7jqo"]
atlas = ExtResource("1_01cgb")
region = Rect2(64, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k8oj"]
atlas = ExtResource("1_01cgb")
region = Rect2(96, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kpp2"]
atlas = ExtResource("1_01cgb")
region = Rect2(128, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25ho"]
atlas = ExtResource("1_01cgb")
region = Rect2(160, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plx2q"]
atlas = ExtResource("1_01cgb")
region = Rect2(192, 80, 32, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_chrak"]
load_path = "res://.godot/imported/Beetle-Sheet.png-16febdd66ec0754389553783bc9bf69c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_mmhca"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(32, 96, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v4wr"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(64, 96, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j36os"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(96, 96, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v06i4"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(128, 96, 32, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nfh4e"]
load_path = "res://.godot/imported/Beetle-Sheet.png-16febdd66ec0754389553783bc9bf69c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_yae73"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(32, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ektee"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(64, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcjwf"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(96, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwfo5"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(128, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_imkc7"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_14xim"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vxyt"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0all"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tagm"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0he56"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(64, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_18hix"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(96, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j52c"]
atlas = SubResource("CompressedTexture2D_nfh4e")
region = Rect2(128, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt556"]
atlas = SubResource("CompressedTexture2D_lp0oi")
region = Rect2(96, 64, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wwr5"]
atlas = SubResource("CompressedTexture2D_lp0oi")
region = Rect2(128, 64, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtada"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uouei"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8frqn"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(96, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iviqc"]
atlas = SubResource("CompressedTexture2D_chrak")
region = Rect2(128, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sve71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6a70")
}],
"loop": false,
"name": &"bend",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2153")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7jqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k8oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kpp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plx2q")
}],
"loop": false,
"name": &"climb",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmhca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v4wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j36os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v06i4")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yae73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ektee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcjwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwfo5")
}],
"loop": true,
"name": &"hold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imkc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14xim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vxyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0all")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tagm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0he56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18hix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j52c")
}],
"loop": true,
"name": &"push",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt556")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wwr5")
}],
"loop": false,
"name": &"throw",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtada")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uouei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8frqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iviqc")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6fppb"]
radius = 3.0
height = 8.57143

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oyfcb"]
radius = 4.0
height = 11.1429

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fbnl"]
size = Vector2(0.285714, 5.42857)

[node name="RigidBeetle" type="RigidBody2D" node_paths=PackedStringArray("input_component", "rigid_movement_component", "rigid_animation_component")]
z_index = 3
collision_layer = 2
collision_mask = 23
mass = 0.01
script = ExtResource("1_cm0x8")
input_component = NodePath("InputComponent")
rigid_movement_component = NodePath("RigidMovementComponent")
rigid_animation_component = NodePath("RigidAnimationComponent")

[node name="Animator" type="AnimatedSprite2D" parent="."]
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_sve71")
animation = &"idle"
autoplay = "idle"

[node name="HitBox" type="CollisionShape2D" parent="."]
rotation = -1.5708
scale = Vector2(7, 7)
shape = SubResource("CapsuleShape2D_6fppb")

[node name="DungArea" type="Area2D" parent="."]
scale = Vector2(7, 7)
collision_layer = 2
collision_mask = 4

[node name="DungBox" type="CollisionShape2D" parent="DungArea"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_oyfcb")

[node name="OverArea" type="Area2D" parent="."]
scale = Vector2(7, 7)
collision_layer = 2
collision_mask = 4

[node name="OverBox" type="CollisionShape2D" parent="OverArea"]
position = Vector2(0, 3)
rotation = -1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_3fbnl")

[node name="RayCast" type="RayCast2D" parent="."]
scale = Vector2(7, 7)
target_position = Vector2(0, 4)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_ugt8w")

[node name="BeetleMovement" type="Node" parent="StateChart"]
script = ExtResource("4_osvh8")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToWalk" type="Node" parent="StateChart/BeetleMovement/Idle"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="ToHold" type="Node" parent="StateChart/BeetleMovement/Idle"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Hold")
event = &"to_hold"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateChart/BeetleMovement/Idle"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Fall")
event = &"to_fall"
delay_in_seconds = ""

[node name="Walk" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToIdle" type="Node" parent="StateChart/BeetleMovement/Walk"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToHold" type="Node" parent="StateChart/BeetleMovement/Walk"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Hold")
event = &"to_hold"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateChart/BeetleMovement/Walk"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Fall")
event = &"to_fall"
delay_in_seconds = ""

[node name="Hold" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToIdle" type="Node" parent="StateChart/BeetleMovement/Hold"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalk" type="Node" parent="StateChart/BeetleMovement/Hold"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="ToPush" type="Node" parent="StateChart/BeetleMovement/Hold"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Push")
event = &"to_push"
delay_in_seconds = "0.0"

[node name="ToClimb" type="Node" parent="StateChart/BeetleMovement/Hold"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Climb")
event = &"to_climb"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateChart/BeetleMovement/Hold"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Fall")
event = &"to_fall"
delay_in_seconds = ""

[node name="Push" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToIdle" type="Node" parent="StateChart/BeetleMovement/Push"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalk" type="Node" parent="StateChart/BeetleMovement/Push"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="ToHold" type="Node" parent="StateChart/BeetleMovement/Push"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Hold")
event = &"to_hold"
delay_in_seconds = "0.0"

[node name="ToClimb" type="Node" parent="StateChart/BeetleMovement/Push"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Climb")
event = &"to_climb"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateChart/BeetleMovement/Push"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Fall")
event = &"to_fall"
delay_in_seconds = ""

[node name="Climb" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToIdle" type="Node" parent="StateChart/BeetleMovement/Climb"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalk" type="Node" parent="StateChart/BeetleMovement/Climb"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="Fall" type="Node" parent="StateChart/BeetleMovement"]
script = ExtResource("5_ij111")

[node name="ToIdle" type="Node" parent="StateChart/BeetleMovement/Fall"]
script = ExtResource("6_sx0lh")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="StateChartDebugger" parent="." instance=ExtResource("10_m6x6o")]
offset_left = -272.0
offset_top = -337.0
offset_right = 276.0
offset_bottom = -47.0
initial_node_to_watch = NodePath("../StateChart")

[node name="InputComponent" type="Node2D" parent="."]
script = ExtResource("7_64t7q")

[node name="RigidMovementComponent" type="Node2D" parent="."]
script = ExtResource("7_n44gs")

[node name="RigidAnimationComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("8_s8l21")
sprite = NodePath("../Animator")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="DungArea" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="DungArea" to="." method="_on_area_body_exited"]
[connection signal="body_entered" from="OverArea" to="." method="_on_over_area_body_entered"]
[connection signal="body_exited" from="OverArea" to="." method="_on_over_area_body_exited"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Idle" to="." method="_on_idle_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Walk" to="." method="_on_walk_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Walk" to="." method="_on_walk_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Walk" to="." method="_on_walk_state_physics_processing"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Hold" to="." method="_on_hold_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Hold" to="." method="_on_hold_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Hold" to="." method="_on_hold_state_physics_processing"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Push" to="." method="_on_push_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Push" to="." method="_on_push_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Push" to="." method="_on_push_state_physics_processing"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Climb" to="." method="_on_climb_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Climb" to="." method="_on_climb_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Climb" to="." method="_on_climb_state_physics_processing"]
[connection signal="state_entered" from="StateChart/BeetleMovement/Fall" to="." method="_on_fall_state_entered"]
[connection signal="state_exited" from="StateChart/BeetleMovement/Fall" to="." method="_on_fall_state_exited"]
[connection signal="state_physics_processing" from="StateChart/BeetleMovement/Fall" to="." method="_on_fall_state_physics_processing"]
